feat: rename `tree-sitter-helix` to `tree-sitter-multicursor`

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 3.13)
 
-project(tree-sitter-helix
+project(tree-sitter-multicursor
         VERSION "0.1.0"
         DESCRIPTION "A parser for the extremely simple Helix language"
-        HOMEPAGE_URL "https://github.com/nik-rev/tree-sitter-helix"
+        HOMEPAGE_URL "https://github.com/nik-rev/tree-sitter-multicursor"
         LANGUAGES C)
 
 option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
@@ -24,33 +24,33 @@ add_custom_command(OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/src/parser.c"
                    WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}"
                    COMMENT "Generating parser.c")
 
-add_library(tree-sitter-helix src/parser.c)
+add_library(tree-sitter-multicursor src/parser.c)
 if(EXISTS ${CMAKE_CURRENT_SOURCE_DIR}/src/scanner.c)
-  target_sources(tree-sitter-helix PRIVATE src/scanner.c)
+  target_sources(tree-sitter-multicursor PRIVATE src/scanner.c)
 endif()
-target_include_directories(tree-sitter-helix PRIVATE src)
+target_include_directories(tree-sitter-multicursor PRIVATE src)
 
-target_compile_definitions(tree-sitter-helix PRIVATE
+target_compile_definitions(tree-sitter-multicursor PRIVATE
                            $<$<BOOL:${TREE_SITTER_REUSE_ALLOCATOR}>:TREE_SITTER_REUSE_ALLOCATOR>
                            $<$<CONFIG:Debug>:TREE_SITTER_DEBUG>)
 
-set_target_properties(tree-sitter-helix
+set_target_properties(tree-sitter-multicursor
                       PROPERTIES
                       C_STANDARD 11
                       POSITION_INDEPENDENT_CODE ON
                       SOVERSION "${TREE_SITTER_ABI_VERSION}.${PROJECT_VERSION_MAJOR}"
                       DEFINE_SYMBOL "")
 
-configure_file(bindings/c/tree-sitter-helix.pc.in
-               "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-helix.pc" @ONLY)
+configure_file(bindings/c/tree-sitter-multicursor.pc.in
+               "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-multicursor.pc" @ONLY)
 
 include(GNUInstallDirs)
 
-install(FILES bindings/c/tree-sitter-helix.h
+install(FILES bindings/c/tree-sitter-multicursor.h
         DESTINATION "${CMAKE_INSTALL_INCLUDEDIR}/tree_sitter")
-install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-helix.pc"
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/tree-sitter-multicursor.pc"
         DESTINATION "${CMAKE_INSTALL_DATAROOTDIR}/pkgconfig")
-install(TARGETS tree-sitter-helix
+install(TARGETS tree-sitter-multicursor
         LIBRARY DESTINATION "${CMAKE_INSTALL_LIBDIR}")
 
 add_custom_target(ts-test "${TREE_SITTER_CLI}" test
