--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
-name = "tree-sitter-helix"
+name = "tree-sitter-multicursor"
 description = "A parser for the extremely simple Helix language"
 version = "0.1.0"
 authors = ["Nikita Revenco <pm@nikrev.com>"]
 license = "MIT"
 readme = "README.md"
-keywords = ["incremental", "parsing", "tree-sitter", "helix"]
+keywords = ["incremental", "parsing", "tree-sitter", "multicursor"]
 categories = ["parsing", "text-editors"]
-repository = "https://github.com/nik-rev/tree-sitter-helix"
+repository = "https://github.com/nik-rev/tree-sitter-multicursor"
 edition = "2021"
 autoexamples = false
 
