--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,10 +3,10 @@ requires = ["setuptools>=42", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "tree-sitter-helix"
+name = "tree-sitter-multicursor"
 description = "A parser for the extremely simple Helix language"
 version = "0.1.0"
-keywords = ["incremental", "parsing", "tree-sitter", "helix"]
+keywords = ["incremental", "parsing", "tree-sitter", "multicursor"]
 classifiers = [
   "Intended Audience :: Developers",
   "Topic :: Software Development :: Compilers",
@@ -19,7 +19,7 @@ license.text = "MIT"
 readme = "README.md"
 
 [project.urls]
-Homepage = "https://github.com/nik-rev/tree-sitter-helix"
+Homepage = "https://github.com/nik-rev/tree-sitter-multicursor"
 
 [project.optional-dependencies]
 core = ["tree-sitter~=0.22"]
